--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         </div>
         <div class="pdf-details">
             <h3>Low GPA Explanation</h3>
-            <a href="Low_GPA_Explanation.pdf" download="Low_GPA_Explanation.pdf" class="download-button">Download</a>
+            <a href="Low GPA Explanation.pdf" download="Low_GPA_Explanation.pdf" class="download-button">Download</a>
         </div>
     </div>
 
