--- a/index.html
+++ b/index.html
@@ -324,13 +324,14 @@
             <h3>Cybersecurity</h3>
             <ul>
                 <li>Kali Linux</li>
-                <li>Burpsuite</li>
+                <li>Web Application Security</li>
                 <li>Threat intelligence analysis</li>
                 <li>Networking</li>
                 <li>Reconnaissance</li>
                 <li>SQL Injection</li>
                 <li>Social Engineering</li>
                 <li>Brute Force Attacks</li>
+                <li>Wireless Security</li>
               
             </ul>
         </div>
@@ -349,6 +350,7 @@
                 <li>APIs</li>
                 <li>Time Management</li>
                 <li>Windows</li>
+                <li>Team Collaboration</li>
             </ul>
         </div>
     </div>
