--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 
        
         <div class="skill-category">
-            <h3>Programming Languages</h3>
+            <h3>Programming & Markup Languages</h3>
             <ul>
                 <li>HTML</li>
                 <li>CSS</li>
